--- a/.gitignore
+++ b/.gitignore
@@ -57,11 +57,11 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
-.env
-
 # parcel-bundler cache (https://parceljs.org/)
 .cache
+
+# env file ignore
+.env.local
 
 # next.js build output
 .next
